# shapdf

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy-pages.yml  python-publish.yml  python-test.yml  rust-test.yml
examples/shapdf.wqzhao.org/: README.md  index.html  package-lock.json  package.json
examples/shapdf.wqzhao.org/src/: App.tsx
examples/wasm/: Cargo.toml  README.md  index.html  main.js  package-lock.json  package.json
examples/wasm/src/: lib.rs
python/: Cargo.toml  README.md  pyproject.toml
src/: generator.rs  lib.rs  main.rs  script.rs  shapes.rs  units.rs
vscode-shapdf/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  TESTING.md  language-configuration.json  package-lock.json  package.json
vscode-shapdf/src/: extension.ts  previewManager.ts
vscode-shapdf/syntaxes/: shapdf.tmLanguage.json
