[package]
name = "shapdf"
description = "Create Shapes into PDF"
repository = "https://github.com/Teddy-van-Jerry/shapdf"
authors = ["Teddy van Jerry <me@teddy-van-jerry.org>"]
version = "0.2.0"
readme = "README.md"
license = "GPL-3.0-or-later"
edition = "2021"
exclude = [
    "target/*",
    "output/*",
    "Cargo.lock",
    ".github/*",
    ".vscode/*",
    ".DS_Store",
]

[features]
default = ["compress"]
compress = ["dep:flate2"]
wasm = []

[dependencies]
once_cell = "1.20"
flate2 = { version = "1.0", optional = true }
clap = { version = "4.5", features = ["derive"] }
